[tool.poetry]
name = "algo-learn"
version = "0.1.0"
description = ""
authors = ["Nham Le <lehoainham@gmail.com>"]
readme = "README.md"
packages = [{include = "algo_learn"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
